--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,20 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.0
   firebase_core: "0.5.3"
+  firebase_auth: "^0.18.4"
+  mobx: ^1.2.1+4
+  flutter_mobx: ^1.1.0+2
+  freezed: ^0.12.3
+  provider: ^4.3.2+2
+  get_it: ^5.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mobx_codegen: ^1.1.2
+  lint: ^1.2.0
+  build_runner: ^1.10.7
+  json_serializable:
 
 flutter:
   uses-material-design: true
