--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   freezed: ^0.12.3
   provider: ^4.3.2+2
   get_it: ^5.0.1
+  cloud_firestore: "^0.14.4"
+  rxdart: ^0.24.1
+  dash_chat: ^1.1.15
 
 dev_dependencies:
   flutter_test:
